Box with `box-sizing:border-box` causes incorrect width calculation https://bugs.webkit.org/show_bug.cgi?id=267625

Reviewed by Alan Baradlay.

Fix width calculation for boxes with `border-box`, `aspect-ratio` and `display: positioned`

When a box has `box-sizing: border-box` and an aspect ratio set and is positioned,
the width calculation incorrectly adds the border and padding to the box size.
Since the box uses `border-box`, this border and padding addition is wrong.

This patch fixes the behavior by checking if box has `box-sizing: border-box`
and an aspect ratio before setting the final width value.

Test: imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/box-sizing-aspect-ratio-positioned.html
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/box-sizing-aspect-ratio-positioned.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/box-sizing-aspect-ratio-positioned-expected.txt: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeOutOfFlowPositionedLogicalWidth const):

Canonical link: https://commits.webkit.org/303834@main